--- a/PI/views/index.ejs
+++ b/PI/views/index.ejs
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    
   </head>
+  <header>
+    <%-include('./partials/header')%>
+  </header>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+     <h1><%= title %></h1>
+     <p>Welcome to <%= title %></p>
   </body>
+  <footer>
+      <%-include('./partials/footer')%>
+  </footer>
 </html>
