Migracion Proyecto base

--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -11,6 +11,7 @@
     <!-- UIkit JS -->
      
     <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/general.css">
     
 </head>
 <body>
