--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -6,9 +6,15 @@
     <%-include('./partials/header')%>
  </header>
 <main>
-
-
-    
+    <div class="uk-section uk-section-small">
+        <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
+            <form action="">
+                
+                <h2>(Formulario de registración)</h2>
+        
+            </form>
+        </div>
+    </div>
 </main>
  <footer>
     <%-include('./partials/footer')%>
