--- a/PI/views/detallePost.ejs
+++ b/PI/views/detallePost.ejs
@@ -6,9 +6,121 @@
     <%-include('./partials/header')%>
  </header>
 <main>
-
-
-    
+    <div class="uk-section uk-section-xsmall">
+        <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
+            <section class="uk-flex uk-width-2-3 detalle-container">
+                <article class="uk-width-2-3 uk-flex uk-flex-center uk-flex-middle detalle-post">
+                    <img src="https://via.placeholder.com/500x600" alt="Imagen del post" class="imagen-post ">
+                </article>
+                <article class="uk-width-1-3 uk-flex uk-flex-column comentarios-detalle">
+                    <div class="info-post uk-flex uk-flex-middle">
+                        <img src="https://via.placeholder.com/35" alt="Foto del usuario">
+                        <h3>Nombre de usuario</h3>
+                    </div>
+                    <div class="lista-comentarios" >
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                        <div class="comentario uk-flex uk-flex-middle uk-margin-small-top">
+                            <div class="uk-width-1-4 uk-flex uk-flex-center">
+                                <img src="https://via.placeholder.com/35" alt="Foto de usuario">
+                            </div>
+                            <h6 class="uk-margin-remove uk-width-2-4"><a href="">Nombre</a> Comentario Lorem ipsum dolor sit amet</h6>
+                            <a href="" uk-icon="icon:heart; ratio: 0.8" class="uk-width-1-4 uk-text-right icono-meGusta"></a>
+                        </div>
+                       
+                    </div>
+                    <div class="agregar-comentario uk-flex uk-flex-middle">
+                        <form action="" class="uk-text-center">
+                          <input type="text" class="uk-input" placeholder="Agregar comentario"> 
+                          <button class="uk-button uk-button-primary uk-margin-small-top" type="submit">Comentar</button>
+                        </form>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </div>
 </main>
  <footer>
     <%-include('./partials/footer')%>
