--- a/PI/views/headerDeslogueado.ejs
+++ b/PI/views/headerDeslogueado.ejs
@@ -3,13 +3,32 @@
     <title><%= title %></title> 
 </head>
 <header>
-    <%-include('./partials/header')%>
- </header>
-<main>
-
-
-    
-</main>
- <footer>
-    <%-include('./partials/footer')%>
-</footer>
+    <header class="uk-background-primary">
+        <section class=" uk-container uk-container-large">
+            <div class="">
+                <nav class="" uk-navbar>
+                    <div class="uk-navbar-left">
+                        <h2 class="logo"><a href="home.html">FalseBook</a></h2>
+                    </div>
+                    <div class="uk-navbar-center">
+                        <ul class="uk-flex uk-flex-between uk-flex-middle">
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="agregarPost.html">Postear</a></li>
+                            <li><a href="registracion">Registración</a></li>
+                            <li><a href="login.html">Login</a></li>
+                        </ul>
+                    </div>
+                    <div class="uk-navbar-right">
+                        <ul class="uk-flex uk-flex-between uk-flex-middle">
+                            <li>
+                                <form action="" class="uk-search uk-search-default">
+                                    <span uk-search-icon></span>
+                                    <input type="search" class="uk-search-input" placeholder="Buscar...">
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </section>
+    </header>
