--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -6,9 +6,19 @@
     <%-include('./partials/header')%>
  </header>
 <main>
+    <main>
+        <div class="uk-section uk-section-small">
+            <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
+                <form action="">
 
 
-    
+                    <h2>(Formulario de login)</h2>
+                
+                
+                </form>
+            </div>
+        </div>
+    </main>
 </main>
  <footer>
     <%-include('./partials/footer')%>
