--- a/PI/views/resultadoBusqueda.ejs
+++ b/PI/views/resultadoBusqueda.ejs
@@ -6,9 +6,13 @@
     <%-include('./partials/header')%>
  </header>
 <main>
+    <div class="uk-section uk-section-small">
+        <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
+           
+            <h2>(Mostar resultados de busqueda)</h2>
 
-
-    
+        </div>
+    </div>
 </main>
  <footer>
     <%-include('./partials/footer')%>
