Redireccion de hipervinculos

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -36,14 +36,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -74,14 +74,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -112,14 +112,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -150,14 +150,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href=""detalleUsuario>Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -188,14 +188,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -226,14 +226,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="detallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -264,14 +264,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="">Usuario</a>
+                                    <a href="detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="">Ver más...</a>
+                                <a href="derallePost">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -312,14 +312,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -350,14 +350,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -388,14 +388,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -426,14 +426,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -464,14 +464,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallPost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -502,14 +502,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -540,14 +540,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="">Usuario</a>
+                                <a href="detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="">Ver más...</a>
+                            <a href="detallePost">Ver más...</a>
                         </ul>
                     </div>
                 </article>
