--- a/PI/views/partials/headerDeslogueado.ejs
+++ b/PI/views/partials/headerDeslogueado.ejs
@@ -1,8 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="/stylesheet/headerDeslogueado.css">
-    <title><%= title %></title> 
+     <!-- UIkit CSS -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/css/uikit.min.css" />
+    <!-- UIkit JS -->
+
+     <!-- UIkit JS -->
+     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+    <!-- UIkit JS -->
+     
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/general.css">
+    
 </head>
-<header>
+<body>
     <header class="uk-background-primary">
         <section class=" uk-container uk-container-large">
             <div class="">
@@ -12,10 +24,10 @@
                     </div>
                     <div class="uk-navbar-center">
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
-                            <li><a href="home.html">Home</a></li>
-                            <li><a href="agregarPost.html">Postear</a></li>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="agregarPost">Postear</a></li>
                             <li><a href="registracion">Registración</a></li>
-                            <li><a href="login.html">Login</a></li>
+                            <li><a href="login">Login</a></li>
                         </ul>
                     </div>
                     <div class="uk-navbar-right">
@@ -32,3 +44,5 @@
             </div>
         </section>
     </header>
+</body>
+</html>
