--- a/PI/public/stylesheets/home.css
+++ b/PI/public/stylesheets/home.css
@@ -1,3 +1,9 @@
+
+article.dark{
+    background-color: #111111;
+    box-shadow: 10px 10px 20px rgba(0,0,0,.16);
+}
+
 article.post{
     border: 1px solid lightgray;
     border-radius: 10px;
