--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -10,6 +10,11 @@
      <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
     <!-- UIkit JS -->
      
+     <!-- Kit modo oscuro -->
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+     <!-- Kit modo oscuro -->
+
+     <link rel="stylesheet" href="/stylesheets/modoOscuro.css">
     <link rel="stylesheet" href="/stylesheets/header.css">
     <link rel="stylesheet" href="/stylesheets/general.css">
     
@@ -28,7 +33,9 @@
                             <li><a href="agregarPost">Postear</a></li>
                             <li><a href="miPerfil">Perfil</a></li>
                         </ul>
+                                
                     </div>
+                    
                     <div class="uk-navbar-right">
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
                             <li>
@@ -39,9 +46,42 @@
                             </li>
                         </ul>
                     </div>
+                   
+                    <div>
+                        <button class="switch" id="switch">
+                            <span> <i class="fas fa-sun"></i> </span>
+                            <span> <i class="fas fa-moon"></i> </span>
+                        </button>
+                    </div>
                 </nav>
             </div>
         </section>
     </header>
+    <script>
+    const btnSwitch = document.querySelector('#switch'); 
+    btnSwitch.addEventListener('click',() => {
+    document.body.classList.toggle('dark');
+    btnSwitch.classList.toggle('active');
+
+    if(document.body.classList.contains('dark')){
+        localStorage.setItem('dark-mode', 'true');
+    }
+    else {
+        localStorage.setItem('dark-mode', 'false')
+    }
+
+});
+
+    //obtenemos el modo actual
+    if(localStorage.getItem('dark-mode')==='true'){
+    document.body.classList.add('dark');
+    btnSwitch.classList.add('active');
+
+    } else {
+    document.body.classList.remove('dark');
+    btnSwitch.classList.remove('active');
+    }
+
+    </script>
 </body>
 </html>
