--- a/PI/public/stylesheets/general.css
+++ b/PI/public/stylesheets/general.css
@@ -6,12 +6,13 @@ main{
 }
 
 body{
-    background-color: whitesmoke;
-    transition: 3.s ease all;   /* loop */
+    background-color: #E0F7FA;
+    transition: .5s ease all;   /* loop */
 }
 
-body.dark {
+*.dark {
     background-color: #111111;
   box-shadow: 10px 10px 20px rgba(0,0,0,.16);
-  transition: .3s ease all;
+  transition: .5s ease all;
+  color: white;
 }
