--- a/PI/public/stylesheets/header.css
+++ b/PI/public/stylesheets/header.css
@@ -25,7 +25,7 @@ header nav ul li a:hover{
     margin: 0px;
 }
 .logo a{
-    font-family: 'Fjalla One', sans-serif;
+    font-family: helvetica;
     color: white;
 }
 .logo a:hover {
@@ -48,4 +48,11 @@ header div.uk-navbar-center ul li:nth-last-child(1){
 header nav form input, header nav form ::placeholder, header nav form span{
     color: white !important;
     
+}
+header.uk-background-primary{
+    background-color: #00ACC1 ;
+}
+
+.logo.dark{
+    color: black;
 }
