--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -5,8 +5,9 @@
  <header>
     <%-include('./partials/header')%>
  </header>
+ <body>
  <main>
-        <div class="uk-section uk-section-small">
+        <div class="uk-section uk-section-small" class="">
             <div class="uk-container uk-container-large uk-flex">
                 <section id="posts" class="uk-flex uk-flex-middle uk-flex-center uk-flex-column uk-child-width-1-2 uk-width-1-1">
                     <article class="post uk-card-default uk-flex uk-flex-column">
@@ -561,3 +562,5 @@
 <footer>
     <%-include('./partials/footer')%>
 </footer>
+
+</body>
