--- a/PI/public/stylesheets/general.css
+++ b/PI/public/stylesheets/general.css
@@ -10,7 +10,7 @@ body{
     transition: .5s ease all;   /* loop */
 }
 
-*.dark {
+.dark {
     background-color: #111111;
   box-shadow: 10px 10px 20px rgba(0,0,0,.16);
   transition: .5s ease all;
