--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -11,6 +11,10 @@
             <form action="">
                 
                 <h2>(Formulario de registración)</h2>
+                <label for="nombre">Nombre:</label><br>
+                <input type="text" name="nombre" id="nombre"><br>
+                <label for="apellido">Apellido:</label><br>
+                <input type="text" name="apellido" id="apellido"><br>
         
             </form>
         </div>
