--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -15,7 +15,18 @@
                 <input type="text" name="nombre" id="nombre"><br>
                 <label for="apellido">Apellido:</label><br>
                 <input type="text" name="apellido" id="apellido"><br>
-        
+                <label for="apodo">Apodo:</label><br>
+                <input type="text" name="apodo" id="apodo"><br>
+                <form>
+            
+                    <label for="genero">Género:</label><br>
+                    <input type="radio" id="hombre" name="genero" value="hombre">
+                    <label for="hombre">Hombre</label><br>
+                    <input type="radio" id="mujer" name="genero" value="mujer">
+                    <label for="mujer">Mujer</label><br>
+                    <input type="radio" id="otro" name="genero" value="otro">
+                    <label for="otro">Otro</label>
+                  </form>
             </form>
         </div>
     </div>
