fecha de nacimiento

--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -10,7 +10,7 @@
         <div class="uk-container uk-container-large uk-flex uk-flex-middle uk-flex-center">
             <form action="">
                 
-                <h2>(Formulario de registración)</h2>
+                <h2>Formulario de registración</h2>
                 <label for="nombre">Nombre:</label><br>
                 <input type="text" name="nombre" id="nombre"><br>
                 <label for="apellido">Apellido:</label><br>
@@ -25,7 +25,10 @@
                     <input type="radio" id="mujer" name="genero" value="mujer">
                     <label for="mujer">Mujer</label><br>
                     <input type="radio" id="otro" name="genero" value="otro">
-                    <label for="otro">Otro</label>
+                    <label for="otro">Otro</label><br>
+
+                    <label for="nacimiento">Fecha de nacimiento:</label><br>
+                    <input type="date"><br>
                   </form>
             </form>
         </div>
