--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -12,11 +12,11 @@
                 
                 <h2>Formulario de registración</h2>
                 <label for="nombre">Nombre:</label><br>
-                <input type="text" name="nombre" id="nombre"><br>
+                <input type="text" name="nombre" id="nombre" placeholder="Lautaro" required="required"><br>
                 <label for="apellido">Apellido:</label><br>
-                <input type="text" name="apellido" id="apellido"><br>
+                <input type="text" name="apellido" id="apellido" placeholder="Ortiz" required="required"><br>
                 <label for="apodo">Apodo:</label><br>
-                <input type="text" name="apodo" id="apodo"><br>
+                <input type="text" name="apodo" id="apodo" placeholder="Lauti"><br>
                 <form>
             
                     <label for="genero">Género:</label><br>
