--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -29,6 +29,7 @@
 
                     <label for="nacimiento">Fecha de nacimiento:</label><br>
                     <input type="date"><br>
+                    <br><input type="submit">
                   </form>
             </form>
         </div>
