--- a/PI/views/login.ejs
+++ b/PI/views/login.ejs
@@ -12,7 +12,17 @@
                 <form action="">
 
 
-                    <h2>(Formulario de login)</h2>
+                    <h2>Logeate!<h2>
+                    <form action="">
+                    <label for="login">Nombre de usuario:</label><br>
+                    <input type="text" required="required"><br>
+                    <label for="login">Contraseña:</label><br>
+                    <input type="text" required="required"><br>
+                    <br><input type="submit">
+
+
+
+                    </form>
                 
                 
                 </form>
