--- a/PI/views/agregarPost.ejs
+++ b/PI/views/agregarPost.ejs
@@ -10,8 +10,13 @@
         <div class="uk-section uk-section-small">
             <div class="uk-container uk-container-large uk-flex">
                 <form action="">
-                    <h2>(Formulario para agregar un post)</h2>
-
+                    <h2>Agregá un post!</h2>
+                    <label for="postpic">Imágen:</label><br>
+                    <input type="file" name="" id=""><br>
+                    <label for="titulo">Título del post:</label><br>
+                    <input type="text"><br>
+                    <label for="postname">Epígrafe:</label><br>
+                        <input type="text"><br>
                 </form>
 
             </div>
