--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -10,7 +10,7 @@
         <div class="uk-container uk-container-small">
             <section class="info-usuario uk-flex uk-flex-around uk-width-1-1">
                 <div class="uk-width-1-3 uk-flex uk-flex-center uk-flex-middle">
-                    <img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+                    <img src="https://i.imgur.com/LbthCty.png" alt="foto de perfil" class="foto-perfil">
                 </div>
                 <div class="uk-width-2-3 uk-flex uk-flex-column uk-flex-around">
                     <div class="uk-flex uk-flex-middle">
@@ -33,43 +33,43 @@
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/vBYh2Hc.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">Los pibes en BRC</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/ro7oceb.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">Las montañas</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/ugQWkRY.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">Explorando</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/0O3Aor4.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">Amigazo</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/HQQncPo.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">:)</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
                         <a href="detallePost" class="link-detalle">
-                            <img src="https://via.placeholder.com/200" alt="foto de perfil" class="foto-perfil">
-                            <p class="uk-text-center">Lorem ipsum</p>
+                            <img src="https://i.imgur.com/Sg0wjgo.png" alt="foto de perfil" class="foto-perfil">
+                            <p class="uk-text-center">nightlife</p>
                         </a>
                     </div>
 
