--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
      <!-- Kit modo oscuro -->
 
-     <link rel="stylesheet" href="/stylesheets/modoOscuro.css">
+     <link rel="stylesheet" href="/stylesheets/botonModoO.css">
     <link rel="stylesheet" href="/stylesheets/header.css">
     <link rel="stylesheet" href="/stylesheets/general.css">
     
