agregue datos ficticios a la home

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -13,13 +13,13 @@
                     <article class="post uk-card-default uk-flex uk-flex-column">
                         <div class="info-usuario uk-flex ">
                             <div>
-                                <img src="https://via.placeholder.com/40" alt="">
+                                <img src="https://i.imgur.com/m6Zk8Fp.png" alt="">
                             </div>
-                            <h4>Usuario</h4>
+                            <h4>ortizlautaro</h4>
                             
                         </div>
                         <div class="post-body uk-flex uk-flex-center">
-                            <img src="https://via.placeholder.com/500x600" alt="">
+                            <img src="https://i.imgur.com/4xEChYZ.png" alt="">
                         </div>
                         <div class="post-reacciones">
                             <ul class="post-icons uk-flex uk-flex-between">
@@ -29,20 +29,20 @@
                                 </li>
                             </ul>
                             <div class="post-pie uk-flex">
-                                <h5 class="uk-width-1-6">Usuario</h5>
-                                <p class="uk-width-5-6">Pie de post</p>
+                                <h5 class="uk-width-1-6">ortizlautaro</h5>
+                                <p class="uk-width-5-6">Ayuda, estamos perdidos!!</p>
                             </div>
                         </div>
                         <div class="post-comentarios">
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
-                                    <p>Comentario</p>
+                                    <a href="detalleUsuario">chaco.basquet</a>
+                                    <p>Que grandes</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
-                                    <p>Comentario</p>
+                                    <a href="detalleUsuario">miPapa2020</a>
+                                    <p>Saludos cracks!!</p>
                                 </li>
                                 <a href="detallePost">Ver más...</a>
                             </ul>
