--- a/PI/public/stylesheets/general.css
+++ b/PI/public/stylesheets/general.css
@@ -1,8 +1,10 @@
 *{
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
 }
 main{
     margin-bottom: 40px;
+
 }
 
 body{
