--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -28,7 +28,7 @@
                     <label for="otro">Otro</label><br>
 
                     <label for="nacimiento">Fecha de nacimiento:</label><br>
-                    <input type="date"><br>
+                    <input type="date" required="required"><br>
                     <br><input type="submit">
                   </form>
             </form>
