--- a/PI/views/agregarPost.ejs
+++ b/PI/views/agregarPost.ejs
@@ -15,7 +15,7 @@
                     <input type="file" name="" id=""><br>
                     <label for="titulo">Título del post:</label><br>
                     <input type="text"><br>
-                    <label for="postname">Epígrafe:</label><br>
+                    <label for="postname">Descripción:</label><br>
                         <input type="text"><br>
                 </form>
 
