--- a/PI/views/futuroHome.ejs
+++ b/PI/views/futuroHome.ejs
@@ -32,7 +32,7 @@
         </header>
         <main > 
             <div class="titulo">
-            <h1>Conenctate con tus amigos</h1>
+            <h1>Conectate con tus amigos</h1>
       </div>
         <br>
         <br>
