--- a/PI/public/stylesheets/futuroHome.css
+++ b/PI/public/stylesheets/futuroHome.css
@@ -14,7 +14,7 @@ main{
 }
 
 .l{
-    background-color: teal;
+    background-color: #008080;
     padding-left: 20px;
     padding-right: 10px;
     padding-top: 10px;
@@ -28,11 +28,14 @@ main{
 }
 
 a h2{
-    color: whitesmoke;
+    color: #f5f5f5;  
+    font-family: verdana;
+    font-size: 25px;
 }
 
 h1{
     padding-top: 50px;
+    font-family: sans-serif;
     margin-left: 80px;
     color: teal;
     font-size: 150px;
