--- a/PI/views/detalleUsuario.ejs
+++ b/PI/views/detalleUsuario.ejs
@@ -17,6 +17,11 @@
                         <h3 class="uk-margin-remove">Nombre de usuario</h3>
                         <button class="uk-button uk-button-small uk-button-primary uk-margin-left">Seguir</button>
                     </div>
+                    <div class="lema">
+                        <p>
+                        Basquet o morir.
+                        </p>
+                    </div>
                     <div>
                         <ul class="red-usuario uk-flex uk-flex-between uk-width-1-2">
                             <li>100 posts</li>
