--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -17,6 +17,11 @@
                         <h3 class="uk-margin-remove">Lautaro Ortiz</h3>
                         <a href="" uk-icon="icon:cog; ratio: 1.2" class="uk-margin-left"></a>
                     </div>
+                    <div class="lema">
+                        <p>
+                        Buenos días.
+                        </p>
+                    </div>
                     <div>
                         <ul class="red-usuario uk-flex uk-flex-between uk-width-1-2">
                             <li>7 posts</li>
