--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -27,7 +27,7 @@
                     <div class="uk-navbar-left">
                        <h2 class="logo"><a href="/">Acqua</a></h2>
                     </div>
-                    <div class="uk-navbar-center">
+                    <div class="uk-navbar-center" id="indice">
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
                             <li><a href="/">Home</a></li>
                             <li><a href="agregarPost">Postear</a></li>
