--- a/PI/public/stylesheets/general.css
+++ b/PI/public/stylesheets/general.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: verdana;
 }
 main{
     margin-bottom: 40px;
