--- a/PI/public/stylesheets/home.css
+++ b/PI/public/stylesheets/home.css
@@ -1,5 +1,20 @@
 
+h4 {
+    font-family: sans-serif;
+}
 
+h5{
+    font-family: verdana;
+}
+p {
+    font-family: verdana;
+}
+h6 {
+    font-family: verdana;
+}
+ul li a {
+    font-family: monospace;
+}
 article.post{
     border: 1px solid lightgray;
     border-radius: 10px;
@@ -63,4 +78,6 @@ article.post div.post-comentarios ul li a{
 article.post div.post-comentarios ul li p{
     margin: 0 5px;
 }
+
+
 
