--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -23,7 +23,7 @@
                         </p>
                     </div>
                     <div>
-                        <ul class="red-usuario uk-flex uk-flex-between uk-width-1-2">
+                        <ul class="red-usuario uk-flex uk-flex-between uk-width-1-2" id="datos">
                             <li>7 posts</li>
                             <li>435 seguidores</li>
                             <li>509 seguidos</li>
