agregue username al form de registracion

--- a/PI/views/registracion.ejs
+++ b/PI/views/registracion.ejs
@@ -17,6 +17,8 @@
                 <input type="text" name="apellido" id="apellido" placeholder="Ortiz" required="required"><br>
                 <label for="apodo">Apodo:</label><br>
                 <input type="text" name="apodo" id="apodo" placeholder="Lauti"><br>
+                <label for="username">Nombre de usuario:</label><br>
+                <input type="text" name="username" id="username" placeholder="ortizlautaro" required="required"><br>
                 <form>
             
                     <label for="genero">Género:</label><br>
