arregle detalles menores

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -37,7 +37,7 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">chaco.basquet</a>
+                                    <a href="detalleUsuario">franco.chaco</a>
                                     <p>Que grandes</p>
                                 </li>
                                 <li>
