--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -19,7 +19,7 @@
                     </div>
                     <div class="lema">
                         <p>
-                        Buenos días.
+                        Buenos días
                         </p>
                     </div>
                     <div>
