--- a/PI/views/futuroHome.ejs
+++ b/PI/views/futuroHome.ejs
@@ -38,14 +38,14 @@
         <br>
             <div class="todo" >
              <div class="l">
-                 <a href="">
+                 <a href="ingreso/login">
             <h2>
                 Iniciar sesion
             </h2>
         </a>
         </div>
         <div class="r">
-            <a href="">
+            <a href="ingreso/registracion">
                 <h2>
                 Registrarse
             </h2></a>
