arreglo problema de hipervinculos

--- a/PI/views/home.ejs
+++ b/PI/views/home.ejs
@@ -37,14 +37,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">franco.chaco</a>
+                                    <a href="info/detalleUsuario">franco.chaco</a>
                                     <p>Que grandes</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">miPapa2020</a>
+                                    <a href="info/detalleUsuario">miPapa2020</a>
                                     <p>Saludos cracks!!</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -75,14 +75,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle"">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -113,14 +113,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle"">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -151,14 +151,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href=""detalleUsuario>Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -189,14 +189,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -227,14 +227,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="detallePost">Ver más...</a>
+                                <a href="post/detalle">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -265,14 +265,14 @@
                             <h6>Comentarios</h6>
                             <ul>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
                                 <li>
-                                    <a href="detalleUsuario">Usuario</a>
+                                    <a href="info/detalleUsuario">Usuario</a>
                                     <p>Comentario</p>
                                 </li>
-                                <a href="derallePost">Ver más...</a>
+                                <a href="post/detalle">Ver más...</a>
                             </ul>
                         </div>
                     </article>
@@ -313,14 +313,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -351,14 +351,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -389,14 +389,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -427,14 +427,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -465,14 +465,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallPost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -503,14 +503,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
@@ -541,14 +541,14 @@
                         <h6>Comentarios</h6>
                         <ul>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
                             <li>
-                                <a href="detalleUsuario">Usuario</a>
+                                <a href="info/detalleUsuario">Usuario</a>
                                 <p>Comentario</p>
                             </li>
-                            <a href="detallePost">Ver más...</a>
+                            <a href="post/detalle">Ver más...</a>
                         </ul>
                     </div>
                 </article>
