--- a/PI/views/futuroHome.ejs
+++ b/PI/views/futuroHome.ejs
@@ -45,7 +45,7 @@
         </a>
         </div>
         <div class="r">
-            <a href="ingreso/registracion">
+            <a href="ingreso/registro">
                 <h2>
                 Registrarse
             </h2></a>
