--- a/PI/views/miPerfil.ejs
+++ b/PI/views/miPerfil.ejs
@@ -37,42 +37,42 @@
                 <div class="uk-grid uk-child-width-1-3 uk-width-1-1 uk-margin-remove" uk-grid>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/vBYh2Hc.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">Los pibes en BRC</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/ro7oceb.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">Las montañas</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/ugQWkRY.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">Explorando</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/0O3Aor4.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">Amigazo</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/HQQncPo.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">:)</p>
                         </a>
                     </div>
                     <div
                         class="uk-card uk-card-hover uk-card-body uk-flex uk-flex-column uk-flex-middle uk-flex-center ">
-                        <a href="detallePost" class="link-detalle">
+                        <a href="http://localhost:3000/post/detalle" class="link-detalle">
                             <img src="https://i.imgur.com/Sg0wjgo.png" alt="foto de perfil" class="foto-perfil">
                             <p class="uk-text-center">nightlife</p>
                         </a>
