--- a/PI/views/partials/header.ejs
+++ b/PI/views/partials/header.ejs
@@ -30,8 +30,8 @@
                     <div class="uk-navbar-center" id="indice">
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
                             <li><a href="/">Home</a></li>
-                            <li><a href="post/agregar">Postear</a></li>
-                            <li><a href="info/miPerfil">Perfil</a></li>
+                            <li><a href="http://localhost:3000/post/agregar">Postear</a></li>
+                            <li><a href="http://localhost:3000/info/miPerfil">Perfil</a></li>
                         </ul>
                                 
                     </div>
