--- a/PI/views/partials/headerDeslogueado.ejs
+++ b/PI/views/partials/headerDeslogueado.ejs
@@ -20,14 +20,14 @@
             <div class="">
                 <nav class="" uk-navbar>
                     <div class="uk-navbar-left">
-                        <h2 class="logo"><a href="home.html">FalseBook</a></h2>
+                        <h2 class="logo"><a href="/">FalseBook</a></h2>
                     </div>
                     <div class="uk-navbar-center">
                         <ul class="uk-flex uk-flex-between uk-flex-middle">
                             <li><a href="/">Home</a></li>
-                            <li><a href="agregarPost">Postear</a></li>
-                            <li><a href="registracion">Registración</a></li>
-                            <li><a href="login">Login</a></li>
+                            <li><a href="post/agregar">Postear</a></li>
+                            <li><a href="ingreso/registracion">Registración</a></li>
+                            <li><a href="ingreso/login">Login</a></li>
                         </ul>
                     </div>
                     <div class="uk-navbar-right">
